vagrant/k8s/deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: java-ingress
    namespace: java
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-api-demo-sonar-success-service
              port:
                number: 8080
status:
  loadBalancer: {}
